# Furina

./: .editorconfig  .gitignore  CMakeLists.txt  Makefile  README.md  build.ps1  build.sh  clean.ps1  environment.yml  fpm.toml  meson.build
app/: CMakeLists.txt  FIXFORMAT.F  OpenMP.f90  array.f90  base.f90  file.f90  format.f90  main.f90  meson.build  namelist.f90  number.f90  pointer.f90  strings.f90  type.f90
cmake/: compiler.cmake
docs/: Fortran.md  OpenMP.md  ifort.md
src/: furina.f90
src/utils/: constants.f90
test/: test_Ahri.f90
