add_executable(array array.f90)
add_executable(base base.f90)
add_executable(file file.f90)
add_executable(FIXFORMAT FIXFORMAT.F)
add_executable(furina main.f90)
add_executable(namelist namelist.f90)
add_executable(number number.f90)
add_executable(OpenMP OpenMP.f90)
add_executable(pointer pointer.f90)
add_executable(strings strings.f90)
add_executable(type type.f90)
