array = executable('array', sources: 'array.f90')
base = executable('base', sources: 'base.f90')
file = executable('file', sources: 'file.f90')
FIXFORMAT = executable('FIXFORMAT', sources: 'FIXFORMAT.F')
furina = executable('furina', sources: 'main.f90')
namelist = executable('namelist', sources: 'namelist.f90')
number = executable('number', sources: 'number.f90')
OpenMP = executable('OpenMP', sources: 'OpenMP.f90')
pointer = executable('pointer', sources: 'pointer.f90')
strings = executable('strings', sources: 'strings.f90')
type = executable('type', sources: 'type.f90')
